# nxr-io

./: .gitignore  package-lock.json  package.json  tsconfig.json
bindings/wasm/: CMakeLists.txt
bindings/wasm/src/: nxr_io_wasm.cpp
convert/: README.md
convert/brainstorm/: README.md  canonicalize_winding.m  export_canonical.m  nxrzarr.m  test_canonical.m  verify_winding_invariance.m
cpp/: CMakeLists.txt
cpp/include/nxr/io/: array_metadata.h  codec.h  codec_pipeline.h  eigen.h  errors.h  schema.h  sparse.h  types.h  write_options.h  zarr_store.h
cpp/src/: chunking.cpp  chunking.h  codec_pipeline.cpp  codec_zstd.cpp  dtype.cpp  metadata.cpp  metadata.h  schema.cpp  sparse.cpp  zarr_store.cpp
cpp/test/: check.h  gen_crosslang.cpp  test_array_io.cpp  test_codec.cpp  test_codec_pipeline.cpp  test_crud.cpp  test_dtype.cpp  test_eigen.cpp  test_groups.cpp  test_read_existing.cpp  test_schema.cpp  test_sparse.cpp
dev/: NXR-IO-CPP.md
docs/superpowers/plans/: 2026-05-28-codec-pipeline.md
schema/: SPEC.md  nxr.field.schema.json  nxr.manifold.schema.json  nxr.maps.schema.json  nxr.meta.schema.json  nxr.recordings.schema.json  nxr.subject.schema.json  nxr.timeseries.schema.json  registry.json
schema/seed/: CONVENTIONS.md  common.meta.schema.json  field.meta.schema.json  field.schema.json  manifold.meta.schema.json  manifold.schema.json
scripts/: build-wasm.sh  validate-schemas.mjs
src/: accessors.ts  attrs.ts  browser.ts  crud.ts  group.ts  index.ts  inverse.test.ts  inverse.ts  list.test.ts  list.ts  manifold-anatomy.test.ts  read.test.ts  read.ts  registry.ts  schema.ts  sensors.test.ts  sensors.ts  sensors.window.test.ts  sparse.ts  store-node.ts  store.ts  timeseries.schema.test.ts  timeseries.test.ts  timeseries.ts  types.ts  write.ts
src/import/: obj.ts
test/: accessors.node.ts  crosslang.node.ts  crud.node.ts  import-obj.node.ts  list.node.ts  local-store.node.ts  read.node.ts  read.test.ts  registry.node.ts  schema.node.ts  wasm.smoke.mjs
test/data/gbf_benchmark.zarr/: zarr.json
test/data/gbf_benchmark.zarr/forward_eeg/: zarr.json
test/data/gbf_benchmark.zarr/forward_eeg/sol/: zarr.json
test/data/gbf_benchmark.zarr/forward_eeg/sol/c/0/: 0  1  2  3
test/data/gbf_benchmark.zarr/forward_eeg/sol/c/1/: 0  1  2  3
test/data/gbf_benchmark.zarr/forward_eeg/sol/c/2/: 0  1  2  3
test/data/gbf_benchmark.zarr/forward_eeg/sol/c/3/: 0  1  2  3
test/data/gbf_benchmark.zarr/forward_eeg/sol/c/4/: 0  1  2  3
test/data/gbf_benchmark.zarr/forward_eeg/sol/c/5/: 0  1  2  3
test/data/gbf_benchmark.zarr/forward_eeg/sol/c/6/: 0  1  2  3
test/data/gbf_benchmark.zarr/forward_eeg/sol/c/7/: 0  1  2  3
test/data/gbf_benchmark.zarr/forward_eeg/source_nn/c/0/: 0
test/data/gbf_benchmark.zarr/forward_eeg/source_rr/: zarr.json
test/data/gbf_benchmark.zarr/forward_eeg/source_rr/c/0/: 0
test/data/gbf_benchmark.zarr/noise_cov_eeg/: zarr.json
test/data/gbf_benchmark.zarr/noise_cov_eeg/data/: zarr.json
test/data/gbf_benchmark.zarr/noise_cov_eeg/data/c/0/: 0
test/data/gbf_benchmark.zarr/sources/: zarr.json
test/data/gbf_benchmark.zarr/sources/patterns/: zarr.json
test/data/gbf_benchmark.zarr/sources/patterns/c/0/: 0  1  2  3
test/data/gbf_benchmark.zarr/sources/patterns/c/1/: 0  1  2  3
test/data/gbf_benchmark.zarr/sources/patterns/c/2/: 0  1  2  3
test/data/gbf_benchmark.zarr/sources/patterns/c/3/: 0  1  2  3
test/data/gbf_benchmark.zarr/sources/patterns/c/4/: 0  1  2  3
test/data/gbf_benchmark.zarr/sources/patterns/c/5/: 0  1  2  3
test/data/gbf_benchmark.zarr/sources/patterns/c/6/: 0  1  2  3
test/data/gbf_benchmark.zarr/sources/patterns/c/7/: 0  1  2  3
test/data/gbf_benchmark.zarr/src/lh/vertno/: zarr.json
test/data/gbf_benchmark.zarr/src/rh/: zarr.json
test/data/gbf_benchmark.zarr/src/rh/vertno/c/: 0
